@@ -1,5 +1,8 @@
 2008-11-05  Akira TAGOH  <tagoh@redhat.com>
 
+	* utils/imsettings-start.c (main): start the default IM if no arguments
+	specified.
+
 	* data/none.in.in (QT_IM_MODULE): default to xim.
 
 2008-10-28  Akira TAGOH  <tagoh@redhat.com>
